# MAIRA-TO-THE-MARS

./: app.py  brad-finance-team-firebase-adminsdk-hssdi-c3930799c2.json  brad_analysis_agents.py  brad_analysis_tasks.py  check_directory.py  check_file_presence.py  compile_report.py  index.html  main1.py  main10.py  main11.py  main12.py  main13.py  main14.py  main15.py  main16.py  main17.py  main18.py  main19.py  main2.py  main20.py  main21.py  main22.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py  models.py  package-lock.json  pyproject.toml  requirements.txt  run_all.py  something.txt  sup_main1.py  sup_main10.py  sup_main11.py  sup_main12.py  (+17 more)
static/: frontend.js
tools/: image_search_tools.py  sec_tools.py
